assets/css/style.css
/* ... */
.wrapper {
	min-height: 894.8px;
	padding: 50px 25px 0;
	padding-top: 50px;
	padding-left: 25px;
	border-width: 24px;
	background: var(--wrapper-color) ;
	transition: all, 1s;
	display: -webkit-flex;
	display: flex;
}

.primary {
	max-width: 559.6px;
	-webkit-flex: 1 0 65.83%;
	flex: 1 0 65.83%;
	-webkit-order: 1;
	order: 1;
	min-width: 0;
	transition: all 0.2s ease;
}

.primary.full {
	max-width: 900px;
	transition: all .5s ease;
}

.homepage-content{
	margin-top: 19px;
}

/* ------------------- Bagian Sidebar ----------------- */

.sidebar {
	-webkit-flex: 1 0 31.66%;
	flex: 1 0 31.66%;
	-webkit-order: 2;
	order: 2;
	min-width: 0;
	margin: 0 0 0 2.5%;
	transition: visibility 0.3s ease;
	opacity: 1;
}

.sidebar.visible {
	opacity: 0;
	transition: all 0.3s ease;
}

.sidebar.hidden {
	display: none;
}



.sidebar--left {
	-webkit-order: 0;
	order: 0;
	margin: 0 2.5% 0 0;
}

.clearfix {
	display: block;
	color: var(--primary-text-color);
	overflow: auto;
	overflow-x: hidden;
	align-content: center;
}

.list__excerpt .clearfix p{
	font-size: 14px;
}

.clearfix::after {
	display: block;
	height: 10px;
	padding: 0;
	margin: 0;
	overflow: auto;
	clear: both;
	line-height: -1;
	visibility: hidden;
	content: "";
	color: var(--primary-pure-color);
}

input,
button,
select,
optgroup,
textarea {
	margin: 0;
	font-family: inherit;
	font-size: inherit;
	line-height: inherit;
}

/* Button */
.btn {
	/* padding: 5px 10px; */
	font-weight: 700;
	color: var(--primary-text-color);
	white-space: pre-line;
	background: var(--btn-color);
}

.btn:hover {
	color: var(--primary-text-color);
	/* background: var(--highlight-color); */
}

/* Animation */
.menu__item,
.btn {
	transition: background-color .25s ease-out;
}

/* Typography */
h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 0 0 20px;
	margin: 0 0 1.25rem;
	font-weight: 700;
	line-height: 1.3;
	color: var(--heading-color) ;
	font-family: Quicksand;
}

h1 {
	font-size: 32px;
	font-size: 2rem;
}

h2 {
	font-size: 24px;
	font-size: 1.5rem;
	font-weight: 700;
	
}

h3 {
	font-size: 20px;
	font-size: 1.15rem;
	color: var(--primary-text-color);
}

h4 {
	font-size: 18px;
	font-size: 1.125rem;
}

h5 {
	font-size: 16px;
	font-size: 1rem;
}

h6 {
	font-size: 16px;
	font-size: 1rem;
}

a {
	color: var(--primary-text-color);
	text-decoration: none;
}

a:hover {
	color: var(--highlight-color);
}

svg > polygon{
	
	fill: var(--highlight-color);
}

hr {
	margin: 0 0 20px;
	border: 0;
	border-top: 1px solid var(--hr-color);
}

p {
	margin: 0 0 20px;
	margin: 0 0 1.25rem;
	color: var(--primary-text-color);
	font-size: 1rem;
}

b,
strong {
	font: inherit;
	font-weight: 700;
}

i,
em {
	font: inherit;
	font-style: italic;
}

ol,
ul {
	padding: 0;
	margin: 0;
}

small {
	font-size: 12px;
	font-size: .75rem;
}

mark {
	background-color: var(--mark-color);
}

figure {
	margin: 0 0 20px;
	margin: 0 0 1.25rem;
}

figcaption {
	margin-top: 4px;
	margin-top: .25rem;
	color: var(--figcaption-color);
	font-style: italic;
	text-align: center;
}

figcaption h4 {
	margin: 0;
	color: inherit;
}

pre,
code,
kbd,
samp {
	font-family: var(--fontFamilySecondary);
	font-size: inherit;
}

pre,
code {
	background-color: var(--wrapper-color) ;
	border: 1px solid var(--bC-color);
	border-radius: 5px;
	padding: .5em;
}

code {
	padding: 4px;
	color: var(--code-color);
}

pre {
	display: block;
	padding: 0;
	/* padding: 1.25rem; */
	margin-bottom: 20px;
	margin-bottom: 1.25rem;
	overflow: auto;
	color: var(--primary-pure-color);
}

pre code {
	padding: 0;
	color: inherit;
	white-space: inherit;
	background: inherit;
	border: 0;
}

kbd {
	padding: 2px 3px;
	color: var(--primary-text-color);
	background-color: var(--btn-color);
}

blockquote {
	background-color: var(--scrollbar-thumb);
	display: block;
	padding: 5px 0 5px 15px;
	margin: 0 0 20px;
	margin: 0 0 1.25rem;
	line-height: 1.6;
	border-left: 5px solid var(--blockquote-border-color);
}

blockquote p:last-child {
	margin: 0;
	color: #7b8b88;
}

blockquote footer {
	text-align: right;
}

sup,
sub {
	font-size: 10px;
	font-size: .625rem;
	font-style: normal;
}

sup {
	vertical-align: super;
}

sub {
	vertical-align: sub;
}

abbr[title] {
	text-decoration: none;
	cursor: help;
	border-bottom: 1px dotted var(--primary-pure-color);
}

q {
	font-style: italic;
}

address {
	margin-bottom: 20px;
	margin-bottom: 1.25rem;
	font-family: "Consolas", Courier New, Courier, monospace;
	line-height: 1.5;
}

dl {
	margin: 0 0 10px 20px;
}

dt,
dd {
	display: list-item;
}

dt {
	font-weight: bold;
	list-style-type: square;
}

dd {
	margin-left: 20px;
	list-style-type: circle;
}

select {
	max-width: 100%;
}

.warning {
	padding: 20px 10px;
	text-align: center;
	border: 1px solid #ddd;
}

.warning__icon {
	margin-bottom: 20px;
	fill: #ddd;
}

/* Header */
.header {
	display: flex;
	border-bottom: 3px;
}
.header__container{
	position: fixed;
	justify-content: space-between;
	top: 0px;
	z-index: 3;
	height: 54px;
	display: flex;
	align-items: center;
	border-bottom: 2px solid;
	border-image: linear-gradient(to right, var(--heading-color), var(--heading-color));
	border-image-slice: 10;
	border-width: 4px;
	transition: top 0.3s;
	background-color: var(--header-color);

}

.header__container.hide{
	top : -50em;
	transition: top, 0.3s;
}

.logo {
	padding-left: 23px;
	flex-shrink: 0;
}

.logo__link {
	display: inline-block;
}

.header .logo__item {
	display: inline-block;
	vertical-align: middle;
}

.logo__img {
	max-height: 10px;
}

.logo--mixed .logo__item {
	margin: .5rem auto;
}

.logo--mixed .logo__img {
	max-width: 40px;
	max-height: 150px;
}

.logo--mixed svg{
	width: 40px;
	height: 40px;
	vertical-align: bottom;
	fill: var(--heading-color);
	cursor: help;
}

.logo--mixed svg:hover{
	fill: var(--logo-hover-color);
}

.logo--mixed .logo__text {
	padding: 0 1rem;
}

.logo__title {
	font-size: 32px;
	font-size: 1.5rem;
	font-weight: 700;
	line-height: 1;
	color: var(--primary-text-color);
}
/* ... */

